logs/talisker.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Werkzeug-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/gunicorn'...
Listing './lib/python3.5/site-packages/gunicorn/app'...
Listing './lib/python3.5/site-packages/gunicorn/http'...
Listing './lib/python3.5/site-packages/gunicorn/instrument'...
Listing './lib/python3.5/site-packages/gunicorn/workers'...
Listing './lib/python3.5/site-packages/gunicorn-19.7.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/ipaddress-1.0.19.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/raven'...
Listing './lib/python3.5/site-packages/raven/conf'...
Listing './lib/python3.5/site-packages/raven/contrib'...
Listing './lib/python3.5/site-packages/raven/contrib/awslambda'...
Listing './lib/python3.5/site-packages/raven/contrib/bottle'...
Listing './lib/python3.5/site-packages/raven/contrib/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django'...
Listing './lib/python3.5/site-packages/raven/contrib/django/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/django/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/pylons'...
Listing './lib/python3.5/site-packages/raven/contrib/tornado'...
Listing './lib/python3.5/site-packages/raven/contrib/webpy'...
Listing './lib/python3.5/site-packages/raven/contrib/zconfig'...
Listing './lib/python3.5/site-packages/raven/contrib/zerorpc'...
Listing './lib/python3.5/site-packages/raven/contrib/zope'...
Listing './lib/python3.5/site-packages/raven/data'...
Compiling './lib/python3.5/site-packages/raven/deprecation.py'...
***   File "./lib/python3.5/site-packages/raven/deprecation.py", line 6
    def __init__(self, dsn, *args, **kwargs):
                                            ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/raven/handlers'...
Listing './lib/python3.5/site-packages/raven/scripts'...
Listing './lib/python3.5/site-packages/raven/transport'...
Listing './lib/python3.5/site-packages/raven/utils'...
Listing './lib/python3.5/site-packages/raven/utils/serializer'...
Listing './lib/python3.5/site-packages/raven-6.4.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/statsd'...
Listing './lib/python3.5/site-packages/statsd/defaults'...
Listing './lib/python3.5/site-packages/statsd-3.2.2.dist-info'...
Listing './lib/python3.5/site-packages/talisker'...
Listing './lib/python3.5/site-packages/talisker/logstash'...
Listing './lib/python3.5/site-packages/talisker-0.9.5.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
